--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8>
-  <title>App</title>
+  <title>Science Hack Day</title>
 
   <meta name="viewport" content="width=device-width; initial-scale=0.6; minimum-scale=0.6; maximum-scale=0.7; user-scalable=0;"/>
   <meta name="apple-mobile-web-app-capable" content="yes" />
